weather-app/main/default/objects/Weather_Report__c/fields/Humidity__c.field-meta.xml
<CustomField>
    <fullName>Humidity__c</fullName>
    <label>Humidity (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>