weather-app/main/default/objects/Weather_Report__c/fields/Pressure__c.field-meta.xml
<CustomField>
    <fullName>Pressure__c</fullName>
    <label>Pressure (hPa)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>