weather-app/main/default/objects/Weather_Report__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature (°C)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>