weather-app/main/default/objects/Weather_Report__c/listViews/All_Weather_Reports.listView-meta.xml
<ListView>
    <fullName>All_Weather_Reports</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Temperature__c</columns>
    <columns>Weather_Description__c</columns>
    <columns>Report_Date_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Weather Reports</label>
    <language>en_US</language>
</ListView>